--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     numpy>=1.23,
     pandas>=2.2
     scipy>=1.12
+    numba>=0.59
     stumpy>=1.12
     matplotlib>=3.5,<4
 
