--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@
 # https://setuptools.pypa.io/en/latest/references/keywords.html
 
 [metadata]
-name = ebpm 
-description = Eye Blink Prototype Matching in EAR time series
+name = espbm 
+description = Eye State Prototype Blink Matching in EAR time series
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
@@ -25,7 +25,7 @@ python_requires = >=3.9
 install_requires =
     numpy>=1.23,
     pandas>=2.2
-    scipy>=1.12
+    scipy>=1.12,<1.13
     numba>=0.59
     stumpy>=1.12
     matplotlib>=3.5,<4
@@ -42,7 +42,7 @@ testing =
 
 [tool:pytest]
 addopts =
-    --cov ebpm --cov-report term-missing
+    --cov espbm --cov-report term-missing
     --verbose
 norecursedirs =
     dist
