--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ package_dir =
 # Require a min/specific Python version (comma-separated conditions)
 python_requires = >=3.9
 install_requires =
-    numpy>=1.23,
+    numpy>=1.23
     pandas>=2.2
     scipy>=1.12,<1.13
     numba>=0.59
